# glider

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  default.nix  pyproject.toml  requirements.in  requirements.txt  ruff.toml  text_chat.py  voice_chat.py
.github/workflows/: docker.yml
