[tool.poetry]
name = "glider"
version = "0.1.0"
description = "The Bat Signal for your Space."
authors = ["Piotr Gaczkowski <doomhammerng@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
discord-py = "^2.4.0"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
